--- a/main.css
+++ b/main.css
@@ -603,6 +603,7 @@ body {
 
   .hero-title {
     font-size: 2.5rem;
+    letter-spacing: -0.03em;
   }
 
   .work {
